Added PUT /account/{id}/fields
