# src/docs/swagger.yaml
@@ -142,7 +142,7 @@ paths:
       consumes:
       - application/json
       description: |-
-        Requires Authorization-header with role "admin".
+        Requires Authorization-header with role "admin" or a matching account id
         Example: Authorization: bearer xxx
         Where "xxx" is a valid JWT token
       operationId: account-del
@@ -173,6 +173,12 @@ paths:
             type: array
         "403":
           description: Forbidden
+          schema:
+            items:
+              $ref: '#/definitions/handlers.ResJSONError'
+            type: array
+        "404":
+          description: Not Found
           schema:
             items:
               $ref: '#/definitions/handlers.ResJSONError'
@@ -237,6 +243,62 @@ paths:
               $ref: '#/definitions/handlers.ResJSONError'
             type: array
       summary: Get account by id
+  /account/{id}/fields:
+    put:
+      consumes:
+      - application/json
+      description: |-
+        Requires Authorization-header with role "admin".
+        Example: Authorization: bearer xxx
+        Where "xxx" is a valid JWT token
+      operationId: account-update-fields
+      parameters:
+      - description: Fields array with objects to be written to database
+        in: body
+        name: body
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/db.AccountCreateInputFields'
+          type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.Account'
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              $ref: '#/definitions/handlers.ResJSONError'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            items:
+              $ref: '#/definitions/handlers.ResJSONError'
+            type: array
+        "403":
+          description: Forbidden
+          schema:
+            items:
+              $ref: '#/definitions/handlers.ResJSONError'
+            type: array
+        "415":
+          description: Unsupported Media Type
+          schema:
+            items:
+              $ref: '#/definitions/handlers.ResJSONError'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            items:
+              $ref: '#/definitions/handlers.ResJSONError'
+            type: array
+      summary: Update account fields
   /auth/api-key:
     post:
       consumes:
